// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent should create the app 1`] = `
<app-root>
  
    <div
    class="app"
  >
    
      
    <div
      class="app__header"
    >
      
        
      <img
        alt="Ultimate Pizza"
        class="app__logo"
        src="/assets/img/logo.svg"
      />
      
      
    </div>
    
      
    <div
      class="app__content"
    >
      
        
      <div
        class="app__nav"
      >
        
          
        <a
          routerlink="products"
          routerlinkactive="active"
        >
          Products
        </a>
        
        
      </div>
      
        
      <div
        class="app__container"
      >
        
          
        <router-outlet />
        
        
      </div>
      
        
      <div
        class="app__footer"
      >
        
          
        <p>
          © Ultimate Pizza Inc.
        </p>
        
        
      </div>
      
      
    </div>
    
    
  </div>
    
</app-root>
`;

exports[`AppComponent should render title in a h1 tag 1`] = `
<app-root>
  
    <div
    class="app"
  >
    
      
    <div
      class="app__header"
    >
      
        
      <img
        alt="Ultimate Pizza"
        class="app__logo"
        src="/assets/img/logo.svg"
      />
      
      
    </div>
    
      
    <div
      class="app__content"
    >
      
        
      <div
        class="app__nav"
      >
        
          
        <a
          href="/products"
          ng-reflect-router-link="products"
          ng-reflect-router-link-active="active"
          routerlink="products"
          routerlinkactive="active"
        >
          Products
        </a>
        
        
      </div>
      
        
      <div
        class="app__container"
      >
        
          
        <router-outlet />
        
        
      </div>
      
        
      <div
        class="app__footer"
      >
        
          
        <p>
          © Ultimate Pizza Inc.
        </p>
        
        
      </div>
      
      
    </div>
    
    
  </div>
    
</app-root>
`;
